Fix : Changedand fixed accountts and docs

--- a/templates/accounts/profile_sidebar.html
+++ b/templates/accounts/profile_sidebar.html
@@ -64,7 +64,7 @@
             </a>
 
             <!-- Create Post -->
-            <a href="{% url 'feed:feed_list' %}?create=true" class="sidebar-link group">
+            <a href="{% url 'feed:create_post' %}" class="sidebar-link group">
                 <i class="fas fa-plus-square text-xl w-6"></i>
                 <span>Create Post</span>
             </a>
